css, js, html - scrollbar fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,16 +55,18 @@
     1. BASE
     ========================================================================== */
 
-    html {height: 100%; font-size: 100%; 
+    html {
+        height: 100%; font-size: 100%; 
         -webkit-text-size-adjust: 100%;
-        } /* Force scrollbar in non-IE and Remove iOS text size adjust without disabling user zoom */
-    body {font-size: 1em; line-height: 1.625em; margin: 0; padding: 0; height:100%; min-height: 100%; 
+    } /* Force scrollbar in non-IE and Remove iOS text size adjust without disabling user zoom */
+
+    body {
+        font-size: 1em; line-height: 1.625em; margin: 0; padding: 0; height:100%; min-height: 100%; 
         -webkit-font-smoothing:antialiased; 
         ont-smoothing:antialiased; 
         text-rendering:optimizeLegibility;
         font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; color:#FFFFFF;background-color:#141414;
         background-image: url(http://basehold.it/i/26/555555);  /* 26px baseline */ 
-
     }
 
     .wrapper {width:990px; margin:0 auto;}
@@ -76,8 +78,13 @@
     2. Layout
     ========================================================================== */
     
-    .meeting-room #container {min-height:100%; width:100%; background: #141414 url('../img/hexagon_BG.png') repeat 100% 0% scroll;}
-        .svg .meeting-room #container {background: #141414 url('../img/svg/hexagon_BG.svg') repeat 100% 0% scroll;}
+    .meeting-room {
+        min-height:100%; width:100%; 
+        background: #141414 url('../img/hexagon_BG.png') repeat 100% 0% scroll;
+    }
+        .svg .meeting-room {
+            background: #141414 url('../img/svg/hexagon_BG.svg') repeat 100% 0% scroll;
+        }
 
         #banner {
             padding:0 0 1.625em 0; margin-top: 3.25em; display:block;
